Closed Bug 1359995 Opened 9 years ago Closed 9 years ago

Crash in nsTArray_Impl<T>::AppendElement<T> | mozilla::RestyleTracker::AddPendingRestyle

Categories

(Core :: CSS Parsing and Computation, defect)

55 Branch
Unspecified
Windows 10
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: marcia, Assigned: emilio)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-7a668e94-3cec-447c-911c-8a5150170426. ============================================================= Seen while looking at nightly crash data. Crashes started using 20170426030329: http://bit.ly/2oKq6rh Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a30dc237c3a600a5231f2974fc2b85dfb5513414&tochange=0f5ba06c4c5959030a05cb852656d854065e2226 Bug 1357142 touched code in this area. ni on :emilio
Flags: needinfo?(emilio+bugs)
Thanks for filling :)
Flags: needinfo?(emilio+bugs)
Attachment #8862200 - Flags: review?(cam) → review+
Pushed by ecoal95@gmail.com: https://hg.mozilla.org/integration/autoland/rev/5ab8cf2eca5f Add back the null-check on curData. r=heycam
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Emilio, I came across a similar looking crash signature. Is this likely to be fixed by your patch, or should I file a new bug? It also looks new as of 4-26. bp-24037bc5-87f1-478d-a863-ebcb30170426
Assignee: nobody → emilio+bugs
Flags: needinfo?(emilio+bugs)
Yeah, it's the same, this time coming from a different function in GeckoRestyleManager. I wouldn't bother filing a new bug. Thanks for checking though!
Flags: needinfo?(emilio+bugs)
Crash Signature: [@ nsTArray_Impl<T>::AppendElement<T> | mozilla::RestyleTracker::AddPendingRestyle] → [@ nsTArray_Impl<T>::AppendElement<T> | mozilla::RestyleTracker::AddPendingRestyle] [@ nsTArray_Impl<T>::AppendElement<T> | mozilla::GeckoRestyleManager::AttributeChanged ]
This is #4 topcrash in the Windows nightlies of 20170427030231, with 62 crashes from perhaps 5 or 6 different installations.
Both crash signatures haven't been seen since the 4-27 Nightly.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: