Bug 1359995: Add back the null-check on curData. r=heycam

I removed it, but seems it can be hit. It'd be nice to have a test-case where it
fails though...

MozReview-Commit-ID: 7Xa3dNHwFMn